--- a/src/pages/components/event-item.css
+++ b/src/pages/components/event-item.css
@@ -32,6 +32,7 @@
   background-size: cover;
 }
 .Torneo-text{
+  text-transform:uppercase;
   position: relative;
     top: 39px;
         font-size: 84px;
@@ -63,6 +64,7 @@ margin-right: 57px;
 }
 .Equipos{
   font-size: 91px;
+      text-transform: capitalize;
 }
 .Hora{
   font-family: LeagueLight, sans-serif;
@@ -70,6 +72,7 @@ margin-right: 57px;
 }
 .HoraAM{
   font-size:77px;
+  text-transform:uppercase;
 }
 .Hora-container{
   font-size: 91px;
