new images front3

--- a/src/pages/components/story-styles.css
+++ b/src/pages/components/story-styles.css
@@ -34,6 +34,7 @@
   height:3840px;
       background: #cccc;
       background-size: cover;
+          background-position: bottom;
       font-family: sans-serif;
       display: flex;
     flex-direction: column;
